*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.2.8 ===
* Implemented GOTT Compressor plugin series.
* Implemented high-precision oversampling algorithms for Oscilloscope plugin series.
* Fixed missing audio preview for single-channel Sampler Plugin series.
* Updated default values for file selectors in Impulse Responses and Impulse Reverb
  plugin series.
* Fixed missing output balance knobs in Impulse Reverb Mono plugin.
* Added 'All' channel selector to Sampler and Multisampler plugin series which is now
  the default value for channel selector.
* Fixed bug in the font manager which could yield memory corrption after complete font
  manager cleanup (reproducible when switching visual schemas).
* Added generation of explicit element definitions for LV2 groups in TTL files as a
  workaround to LV2 problem related to missing predefined port groups' elements.

=== 1.2.7 ===
* Fixed CLAP UI support for Bitwig Studio.
* Fixed build that disabled CairoCanvas for Inline Display feature.
* Fixed memory leakage issued by the libcairo font cache on the plugin UI close.
  Moved custom font rendering solution to direct usage of libfreetype.
* Fixed crash (BadMatch) for Fluxbox window manager on popup windows.
* Fixed popup window heading display in Fluxbox.
* Fixed non-working solo button for Parametric Equalizer after 1.2.6 release.
* Removed Makefile.d. Dependencies are now automatically generated at the build stage.
* Added possibility to invert the behaviour of mouse scroll for all widgets or
  for graph dot widget.
* Added frequency display and gain for each filter of Graphic Equalizer plugin series.
* Added measure button and meter line on graph for Spectrum Analyzer plugin series. 
* Added display of filter number, filer channel and filter type near to the
  frequency and note.