@@ -32,6 +32,8 @@ PLUGIN_DEPENDENCIES     = \
   LSP_PLUGINS_CROSSOVER \
   LSP_PLUGINS_DYNA_PROCESSOR \
   LSP_PLUGINS_EXPANDER \
+  LSP_PLUGINS_FILTER \
+  LSP_PLUGINS_FLANGER \
   LSP_PLUGINS_GATE \
   LSP_PLUGINS_GOTT_COMPRESSOR \
   LSP_PLUGINS_GRAPH_EQUALIZER \
